[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-zero-to-hundred"
version = "0.1.0"
description = "A scalable Python AI agent project scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
pythonpath = ["."]
